feat: integrate Firebase authentication with Google sign-in
- Added Firebase as a dependency in package.json.
- Implemented AuthContext to manage authentication state and provide user context.
- Created Login component for Google sign-in functionality.
- Added UserProfile component to display user information and sign-out option.
- Updated App component to conditionally render login modal and user profile.
- Integrated Firebase authentication methods in firebase.js utility.
- Wrapped App component with AuthProvider in main.jsx for context access.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.4",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
