--- a/src/config/seasons.json
+++ b/src/config/seasons.json
@@ -1,6 +1,12 @@
 {
   "seasons": [
     {
+      "id": "A3a",
+      "name": "Season A3a",
+      "startDate": "2025-05-29T00:00:00.000Z",
+      "endDate": "2025-06-25T23:59:59.999Z"
+    },
+    {
       "id": "A3",
       "name": "Season A3",
       "startDate": "2025-04-27T00:00:00.000Z",
